@@ -1,5 +1,11 @@
 2012-12-11  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer):
+	  - Generate an empty buffer (containing only one SPACE character) to clear
+	    the subtitles.
+
+2012-12-11  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlparse.c: (gst_ttmlparse_chain):
 	  - Use text/x-pango-markup caps instead of text/plain, so textoverlay
 	    knows what we are producing.
